--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ $White: hsl(0, 0%, 100%);
 ::after {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
-  color: $dark;
+  color: $White;
   font-weight: 300;
   margin: 0;
   padding: 0;
@@ -37,4 +37,67 @@ a {
 
 li {
   list-style: none;
+}
+
+body{
+  background: $DarkBlueintro;
+}
+
+.navigation{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .card{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    li{
+      a{
+        padding: 1rem;
+      }
+    }
+  }
+}
+
+.header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: center;
+  background: url(images/bg-curvy-desktop.svg);
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: -90%;
+  .card{
+    width: 720px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  h2{
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    margin: 1rem 0;
+    font-family: 'Raleway', sans-serif;
+  }
+  p{
+    text-align: center;
+    padding: 1.5rem 0;
+    line-height: 1.5rem;
+  }
+  button{
+    cursor: pointer;
+    border: none;
+    padding: 0.5rem 3rem;
+    border-radius: 50px;
+    background: $Cyan;
+  }
 }
